feat: exercise 9 done

--- a/src/regresion_logistica.ipynb
+++ b/src/regresion_logistica.ipynb
@@ -711,6 +711,81 @@
     "ps.strip_dirs().print_stats(10)\n",
     "print(s.getvalue())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "541fadaa",
+   "metadata": {},
+   "source": [
+    "### 9. Evaluación comparativa final entre todos los modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3323d9e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Comparación entre modelos ===\n",
+      "              Modelo  Accuracy  F1 (es_cara)       AUC\n",
+      "0          Logística  0.928082      0.887701  0.976329\n",
+      "1    Logística Tuned  0.928082      0.888889  0.976383\n",
+      "2  Árbol de Decisión  0.883562      0.811111  0.853754\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Asegurarse de que todos los modelos estén entrenados\n",
+    "\n",
+    "# Regresión logística original\n",
+    "log_model = LogisticRegression(random_state=42, max_iter=1000)\n",
+    "log_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Árbol de decisión ya debe estar entrenado como: tree_model\n",
+    "# Modelo tuned ya debe ser: best_model (ajustado vía GridSearchCV)\n",
+    "\n",
+    "# === Predicciones ===\n",
+    "y_pred_log = log_model.predict(X_test_scaled)\n",
+    "y_pred_best = best_model.predict(X_test_scaled)\n",
+    "y_pred_tree = tree_model.predict(X_test)\n",
+    "\n",
+    "# === Probabilidades para ROC ===\n",
+    "y_prob_log = log_model.predict_proba(X_test_scaled)[:, 1]\n",
+    "y_prob_best = best_model.predict_proba(X_test_scaled)[:, 1]\n",
+    "y_prob_tree = tree_model.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "# === Comparación de métricas ===\n",
+    "results = {\n",
+    "    'Modelo': ['Logística', 'Logística Tuned', 'Árbol de Decisión'],\n",
+    "    'Accuracy': [\n",
+    "        accuracy_score(y_test, y_pred_log),\n",
+    "        accuracy_score(y_test, y_pred_best),\n",
+    "        accuracy_score(y_test, y_pred_tree)\n",
+    "    ],\n",
+    "    'F1 (es_cara)': [\n",
+    "        f1_score(y_test, y_pred_log),\n",
+    "        f1_score(y_test, y_pred_best),\n",
+    "        f1_score(y_test, y_pred_tree)\n",
+    "    ],\n",
+    "    'AUC': [\n",
+    "        roc_auc_score(y_test, y_prob_log),\n",
+    "        roc_auc_score(y_test, y_prob_best),\n",
+    "        roc_auc_score(y_test, y_prob_tree)\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "df_results = pd.DataFrame(results)\n",
+    "print(\"=== Comparación entre modelos ===\")\n",
+    "print(df_results)\n"
+   ]
   }
  ],
  "metadata": {
