feat: exercise 11 done

--- a/src/regresion_logistica.ipynb
+++ b/src/regresion_logistica.ipynb
@@ -898,6 +898,257 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3724382a",
+   "metadata": {},
+   "source": [
+    "### 11. Comparación de los 3 modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "16c6954f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Desempeño de Modelos ===\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>auc</th>\n",
+       "      <th>Error (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Logística Tuned</th>\n",
+       "      <td>0.928082</td>\n",
+       "      <td>0.976383</td>\n",
+       "      <td>7.191781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Árbol de Decisión</th>\n",
+       "      <td>0.910959</td>\n",
+       "      <td>0.940262</td>\n",
+       "      <td>8.904110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>0.924658</td>\n",
+       "      <td>0.977291</td>\n",
+       "      <td>7.534247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naive Bayes</th>\n",
+       "      <td>0.866438</td>\n",
+       "      <td>0.957521</td>\n",
+       "      <td>13.356164</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   accuracy       auc  Error (%)\n",
+       "Logística Tuned    0.928082  0.976383   7.191781\n",
+       "Árbol de Decisión  0.910959  0.940262   8.904110\n",
+       "Random Forest      0.924658  0.977291   7.534247\n",
+       "Naive Bayes        0.866438  0.957521  13.356164"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Tiempos de Procesamiento (segundos) ===\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Logística Tuned - Entrenamiento</th>\n",
+       "      <td>0.002905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Logística Tuned - Predicción</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Árbol - Entrenamiento</th>\n",
+       "      <td>0.003834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Árbol - Predicción</th>\n",
+       "      <td>0.002120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest - Entrenamiento</th>\n",
+       "      <td>0.137193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest - Predicción</th>\n",
+       "      <td>0.003997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naive Bayes - Entrenamiento</th>\n",
+       "      <td>0.001001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naive Bayes - Predicción</th>\n",
+       "      <td>0.000999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        0\n",
+       "Logística Tuned - Entrenamiento  0.002905\n",
+       "Logística Tuned - Predicción     0.000000\n",
+       "Árbol - Entrenamiento            0.003834\n",
+       "Árbol - Predicción               0.002120\n",
+       "Random Forest - Entrenamiento    0.137193\n",
+       "Random Forest - Predicción       0.003997\n",
+       "Naive Bayes - Entrenamiento      0.001001\n",
+       "Naive Bayes - Predicción         0.000999"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+    "\n",
+    "# Preparar almacenamiento de resultados\n",
+    "modelos = {}\n",
+    "tiempos = {}\n",
+    "\n",
+    "# 1. Regresión Logística Tuned\n",
+    "start_train = time.time()\n",
+    "best_model.fit(X_train_scaled, y_train)  # Asegúrate que esté definido como LogisticRegression(C=1, penalty='l1', solver='liblinear')\n",
+    "tiempos['Logística Tuned - Entrenamiento'] = time.time() - start_train\n",
+    "\n",
+    "start_pred = time.time()\n",
+    "y_pred_log = best_model.predict(X_test_scaled)\n",
+    "tiempos['Logística Tuned - Predicción'] = time.time() - start_pred\n",
+    "\n",
+    "acc_log = accuracy_score(y_test, y_pred_log)\n",
+    "auc_log = roc_auc_score(y_test, best_model.predict_proba(X_test_scaled)[:, 1])\n",
+    "modelos['Logística Tuned'] = {'accuracy': acc_log, 'auc': auc_log}\n",
+    "\n",
+    "\n",
+    "# 2. Árbol de Decisión\n",
+    "start_train = time.time()\n",
+    "tree_model.fit(X_train, y_train)\n",
+    "tiempos['Árbol - Entrenamiento'] = time.time() - start_train\n",
+    "\n",
+    "start_pred = time.time()\n",
+    "y_pred_tree = tree_model.predict(X_test)\n",
+    "tiempos['Árbol - Predicción'] = time.time() - start_pred\n",
+    "\n",
+    "acc_tree = accuracy_score(y_test, y_pred_tree)\n",
+    "auc_tree = roc_auc_score(y_test, tree_model.predict_proba(X_test)[:, 1])\n",
+    "modelos['Árbol de Decisión'] = {'accuracy': acc_tree, 'auc': auc_tree}\n",
+    "\n",
+    "\n",
+    "# 3. Random Forest\n",
+    "start_train = time.time()\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "tiempos['Random Forest - Entrenamiento'] = time.time() - start_train\n",
+    "\n",
+    "start_pred = time.time()\n",
+    "y_pred_rf = rf_model.predict(X_test)\n",
+    "tiempos['Random Forest - Predicción'] = time.time() - start_pred\n",
+    "\n",
+    "acc_rf = accuracy_score(y_test, y_pred_rf)\n",
+    "auc_rf = roc_auc_score(y_test, rf_model.predict_proba(X_test)[:, 1])\n",
+    "modelos['Random Forest'] = {'accuracy': acc_rf, 'auc': auc_rf}\n",
+    "\n",
+    "\n",
+    "# 4. Naive Bayes\n",
+    "start_train = time.time()\n",
+    "nb_model.fit(X_train, y_train)\n",
+    "tiempos['Naive Bayes - Entrenamiento'] = time.time() - start_train\n",
+    "\n",
+    "start_pred = time.time()\n",
+    "y_pred_nb = nb_model.predict(X_test)\n",
+    "tiempos['Naive Bayes - Predicción'] = time.time() - start_pred\n",
+    "\n",
+    "acc_nb = accuracy_score(y_test, y_pred_nb)\n",
+    "auc_nb = roc_auc_score(y_test, nb_model.predict_proba(X_test)[:, 1])\n",
+    "modelos['Naive Bayes'] = {'accuracy': acc_nb, 'auc': auc_nb}\n",
+    "\n",
+    "\n",
+    "# Mostrar resultados en un DataFrame\n",
+    "import pandas as pd\n",
+    "\n",
+    "df_modelos = pd.DataFrame(modelos).T\n",
+    "df_tiempos = pd.DataFrame([tiempos]).T\n",
+    "df_modelos['Error (%)'] = (1 - df_modelos['accuracy']) * 100\n",
+    "\n",
+    "print(\"\\n=== Desempeño de Modelos ===\")\n",
+    "display(df_modelos)\n",
+    "\n",
+    "print(\"\\n=== Tiempos de Procesamiento (segundos) ===\")\n",
+    "display(df_tiempos)\n"
+   ]
   }
  ],
  "metadata": {
